--- a/roles/zabbix_proxy/tasks/main.yml
+++ b/roles/zabbix_proxy/tasks/main.yml
@@ -128,12 +128,14 @@
 - name: Ensure proxy definition is up-to-date (added/updated/removed)
   vars:
     gather_facts: false
+    ansible_become: false
     ansible_user: "{{ zabbix_api_login_user }}"
     ansible_network_os: community.zabbix.zabbix
     ansible_connection: httpapi
     ansible_httpapi_use_ssl: "{{ zabbix_api_use_ssl }}"
     http_login_user: "{{ zabbix_api_http_user | default(-42) }}"
     http_login_password: "{{ zabbix_api_http_password | default(-42) }}"
+    ansible_host: "{{ zabbix_api_server_host }}"
   community.zabbix.zabbix_proxy:
     state: "{{ zabbix_proxy_state }}"
     status: "{{ zabbix_proxy_status }}"
@@ -147,7 +149,6 @@
     tls_accept: "{{ zabbix_proxy_tls_config[zabbix_proxy_tlsconnect | default('no_encryption')] }}"
   when:
     - zabbix_api_create_proxy | bool
-  delegate_to: "{{ zabbix_api_server_host }}"
   tags:
     - api
 
