fix bugs realted to tlsaccpt/connect and allow unencrypted+psk

--- a/roles/zabbix_agent/defaults/main.yml
+++ b/roles/zabbix_agent/defaults/main.yml
@@ -98,6 +98,7 @@ zabbix_agent_tls_config:
   unencrypted: "1"
   psk: "2"
   cert: "4"
+  unencrypted_psk: "3"
 
 # IPMI settings
 zabbix_agent_ipmi_authtype: -1
