--- a/roles/zabbix_proxy/tasks/main.yml
+++ b/roles/zabbix_proxy/tasks/main.yml
@@ -125,6 +125,9 @@
   tags:
     - config
 
+- debug:
+  msg: "tls_connect={{ zabbix_proxy_tls_config[zabbix_proxy_tlsconnect | default('no_encryption')]}} tls_accept={{ zabbix_proxy_tls_config[zabbix_proxy_tlsaccept | default('no_encryption')] }} zabbix_proxy_tlsconnect={{zabbix_proxy_tlsconnect}}"
+
 - name: Ensure proxy definition is up-to-date (added/updated/removed)
   vars:
     gather_facts: false
