--- a/roles/zabbix_proxy/tasks/main.yml
+++ b/roles/zabbix_proxy/tasks/main.yml
@@ -125,9 +125,6 @@
   tags:
     - config
 
-#- debug:
-#    msg: "tls_connect={{ zabbix_proxy_tls_config[zabbix_proxy_tlsconnect | default('no_encryption')]}} tls_accept={{ zabbix_proxy_tls_config[zabbix_proxy_tlsaccept | default('no_encryption')] }} zabbix_proxy_tlsconnect={{zabbix_proxy_tlsconnect}} config={{zabbix_proxy_tls_config}}"
-
 - name: Ensure proxy definition is up-to-date (added/updated/removed)
   vars:
     gather_facts: false
@@ -148,8 +145,9 @@
     tls_psk: "{{ zabbix_proxy_tlspsk_secret | default(omit) }}"
     tls_psk_identity: "{{ zabbix_proxy_tlspskidentity | default(omit) }}"
     tls_subject: "{{ zabbix_proxy_tls_subject | default(omit) }}"
-    tls_connect: "{{ zabbix_proxy_tls_config[zabbix_proxy_tlsconnect | default('no_encryption')] }}"
-    tls_accept: "{{ zabbix_proxy_tls_config[zabbix_proxy_tlsaccept | default('no_encryption')] }}"
+    # tlsaccept/connect are the reverse on the server compared to the proxy's config file
+    tls_connect: "{{ zabbix_proxy_tls_config[zabbix_proxy_tlsaccept | default('no_encryption')] }}"
+    tls_accept: "{{ zabbix_proxy_tls_config[zabbix_proxy_tlsconnect | default('no_encryption')] }}"
   when:
     - zabbix_api_create_proxy | bool
   tags:
