--- a/roles/zabbix_agent/tasks/api.yml
+++ b/roles/zabbix_agent/tasks/api.yml
@@ -14,6 +14,8 @@
   tags:
     - api
 
+- debug: msg="{{ zabbix_agent_interfaces }}"
+
 - name: "API | Create a new host or update an existing host's info"
   vars:
     ansible_become: false
