--- a/roles/zabbix_proxy/handlers/main.yml
+++ b/roles/zabbix_proxy/handlers/main.yml
@@ -16,3 +16,7 @@
   when:
     - ansible_os_family == 'RedHat'
     - zabbix_http_proxy is defined or zabbix_https_proxy is defined
+
+- name: reload systemd
+  systemd:
+    daemon_reload: yes
