--- a/roles/zabbix_proxy/tasks/main.yml
+++ b/roles/zabbix_proxy/tasks/main.yml
@@ -153,6 +153,24 @@
   tags:
     - api
 
+- name: Ensure directory exists
+  ansible.builtin.file:
+    path: /etc/systemd/system/zabbix-proxy.service.d
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+
+- name: Deploy Zabbix Server systemd override file
+  template:
+    src: templates/zabbix_proxy_override.conf.j2
+    dest: /etc/systemd/system/zabbix-server.service.d/override.conf
+    owner: root
+    group: root
+    mode: '0644'
+  notify:
+    - reload systemd
+
 - name: "zabbix-proxy started"
   ansible.builtin.service:
     name: zabbix-proxy
