--- a/roles/zabbix_proxy/tasks/main.yml
+++ b/roles/zabbix_proxy/tasks/main.yml
@@ -170,6 +170,7 @@
     mode: '0644'
   notify:
     - reload systemd
+    - restart zabbix-proxy
 
 - name: "zabbix-proxy started"
   ansible.builtin.service:
