--- a/roles/zabbix_proxy/handlers/main.yml
+++ b/roles/zabbix_proxy/handlers/main.yml
@@ -20,3 +20,7 @@
 - name: reload systemd
   systemd:
     daemon_reload: yes
+- name: restart zabbix-proxy
+  service: 
+    name: zabbix-proxy
+    state: restarted
